@@ -71,6 +71,9 @@ synce_device_legacy_info_received (SynceDeviceLegacy *self, const guchar *buf, g
   gchar *guid = NULL, *name = NULL, *platform_name = NULL, *model_name = NULL;
   guint os_major = 0, os_minor = 0, version = 0, cpu_type = 0, cur_partner_id = 0, id = 0;
   const guchar *p = buf, *end_ptr = buf + length;
+  DBusError error;
+
+  dbus_error_init(&error);
 
   priv->state = CTRL_STATE_GOT_INFO;
 
@@ -176,6 +179,17 @@ synce_device_legacy_info_received (SynceDeviceLegacy *self, const guchar *buf, g
       priv->state = CTRL_STATE_CONNECTED;
       g_timeout_add((DCCM_PING_INTERVAL * 1000), synce_device_legacy_send_ping, self);
     }
+
+  /* tell hal device is ready */
+
+  g_debug("%s: notify hal that device is ready to be advertised", G_STRFUNC);
+
+  if (!(libhal_device_addon_is_ready(priv->hal_ctx,
+				     priv->udi,
+				     &error))) {
+    g_critical("%s: failed to notify hal that device is ready: %s: %s", G_STRFUNC, error.name, error.message);
+    dbus_error_free(&error);
+  }
 
   goto OUT;
 
